# datarescue

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
.superdesign/: design-system.md
apps/: __init__.py
apps/api/: __init__.py  cli.py  config.py  main.py  models.py  state_machine.py  store.py  workflow.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
demo/datahub/: README.md  dbt-ingestion.yml  postgres-ingestion.yml  schema-drift-actions.yml
demo/dbt/: README.md  dbt_project.yml  profiles.yml  profiles.yml.example
demo/replay/: README.md  (+1 more)
docs/: CONTINUE-2026-07-22-2218.md  architecture.md  demo-script.md  devpost-submission.md  handoff.md
memory/: README.md
scripts/: api-process-identity.sh  datahub-actions.sh  datahub-mcl-proof.sh  datahub-mcp.sh  dbt-artifact-lock.py  demo-connected.sh  demo-runtime.sh  repo_memory.py  seed_datahub_context.py  verify-connected-case.py  verify-datahub-mcl-proof.py  verify-datahub-mcp-proof.py  verify-live-workflow.py  verify-replay.py
tests/: __init__.py  backend_helpers.py  test_audit_coverage.py  test_backend_api.py  test_backend_endpoints.py  test_backend_integrations.py  test_backend_mcl.py  test_backend_policy_and_sql.py  test_backend_units.py  test_connected_case_proof.py  test_control_plane_regressions.py  test_datahub_mcl_proof.py  test_datahub_mcp_proof.py  test_datahub_mcp_runtime.py  test_datahub_semantic_seed.py  test_github_retry_safety.py  test_toolchain_contract.py
(+47 files in other folders)
